working on arithmetic functions